tests/baselines/reference/symbolProperty17.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty17.ts(2,5): error TS2412: Property '[Symbol.iterator]' of type 'number' is not assignable to numeric index type 'string'.


==== tests/cases/conformance/es6/Symbols/symbolProperty17.ts (1 errors) ====
    interface I {
        [Symbol.iterator]: number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2412: Property '[Symbol.iterator]' of type 'number' is not assignable to numeric index type 'string'.
        [s: symbol]: string;
        "__@iterator": string;
    }
    
    var i: I;
    var it = i[Symbol.iterator];